# RAG-VQA

./: PROJECT_REPORT.md  README.md  pyproject.toml  requirements.txt
data/knowledge_base/: sample_knowledge.jsonl
outputs/index/: documents.json  image_vectors.npy  text_vectors.npy
rag_vqa/: __init__.py  answer.py  cli.py  config.py  debug.py  embeddings.py  pipeline.py  query.py  retriever.py  schemas.py  vision.py  web_retriever.py
scripts/: build_okvqa_kb.py
tests/: test_core.py
